--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,5 +1,5 @@
-hero_image: images/banner.png
-theme: red
+hero_image: images/team-chooser.png
+theme: violet
 duration: 2
 listed: true
 ingredient: false
