--- a/en/meta.yml
+++ b/en/meta.yml
@@ -5,14 +5,18 @@ duration: 2
 listed: false
 ingredient: false
 copyedit: false
-curriculum: creator, design-0, programming-0, phys-comp-0, manufacture-0, community-0
+curriculum: 1, design-0, programming-1, phys-comp-0, manufacture-0, community-0
 title: Team Chooser
 description: Make a program to split players into 2 random teams.
 original_url: https://codeclubprojects.org/en-GB/python/team-chooser
-interests: ''
+interests: games
 technologies: python
-site_areas: codeclub, python
-steps:
+site_areas: projects
+hardware: ''
+software: python
+version: 3
+last_tested: 2017-01-01
+steps: 
 - title: 'Introduction: '
 - title: Players
 - title: 'Challenge: Adding more players'
@@ -24,4 +28,3 @@ steps:
 - title: 'Challenge: Random team names'
 - title: 'Challenge: Storing team names'
 - title: 'Challenge: More teams'
-
