--- a/de-DE/meta.yml
+++ b/de-DE/meta.yml
@@ -4,14 +4,18 @@ duration: 2
 listed: true
 ingredient: false
 copyedit: false
-curriculum: creator, design-0, programming-0, phys-comp-0, manufacture-0, community-0
+curriculum: 1, design-0, programming-1, phys-comp-0, manufacture-0, community-0
 title: Team Wähler
 description: Erstelle ein Programm, um die Mitspieler in 2 beliebige Teams aufzuteilen.
 original_url: https://codeclubprojects.org/en-GB/python/team-chooser
-interests: ''
+interests: games
 technologies: python
-site_areas: codeclub, python
-steps:
+site_areas: projects
+hardware: ''
+software: python
+version: 3
+last_tested: 2018-04-05
+steps: 
 - title: 'Einführung'
 - title: Mitspieler
 - title: 'Aufgabe: Weitere Mitspieler hinzufügen'
@@ -23,4 +27,3 @@ steps:
 - title: 'Aufgabe: Beliebige Team-Namen'
 - title: 'Aufgabe: Team Namen speichern'
 - title: 'Aufgabe: Weitere Teams'
-
