auto es-ES meta update

--- a/es-ES/meta.yml
+++ b/es-ES/meta.yml
@@ -4,14 +4,18 @@ duration: 2
 listed: true
 ingredient: false
 copyedit: false
-curriculum: creator, design-0, programming-0, phys-comp-0, manufacture-0, community-0
+curriculum: 1, design-0, programming-1, phys-comp-0, manufacture-0, community-0
 title: Creador de equipos
 description: Crea un programa que divida a los jugadores en 2 equipos aleatorios.
 original_url: https://codeclubprojects.org/en-GB/python/team-chooser
-interests: ''
+interests: games
 technologies: python
-site_areas: codeclub, python
-steps:
+site_areas: projects
+hardware: ''
+software: python
+version: 3
+last_tested: 2018-04-05
+steps: 
 - title: 'Introducción'
 - title: Jugadores
 - title: 'Reto: Añadir más jugadores'
@@ -23,4 +27,3 @@ steps:
 - title: 'Reto: Nombres de equipo aleatorios'
 - title: 'Reto: Almacenamiento de los nombres de los equipos'
 - title: 'Reto: Más equipos'
-
