--- a/it-IT/meta.yml
+++ b/it-IT/meta.yml
@@ -4,14 +4,18 @@ duration: 2
 listed: true
 ingredient: false
 copyedit: false
-curriculum: creator, design-0, programming-0, phys-comp-0, manufacture-0, community-0
+curriculum: 1, design-0, programming-1, phys-comp-0, manufacture-0, community-0
 title: Creatore di Squadra
 description: Creare un programma per dividere i giocatori in 2 squadre a caso.
 original_url: https://codeclubprojects.org/en-GB/python/team-chooser
-interests: ''
+interests: games
 technologies: python
-site_areas: codeclub, python
-steps:
+site_areas: projects
+hardware: ''
+software: python
+version: 3
+last_tested: 2018-04-05
+steps: 
 - title: 'Introduzione'
 - title: Giocatori
 - title: 'Sfida: Aggiungi altri giocatori'
@@ -23,4 +27,3 @@ steps:
 - title: 'Sfida: Nomi casuali di squadra'
 - title: 'Sfida: Immagazzinamento dei nomi di squadra'
 - title: 'Sfida: Altre squadre'
-
