--- a/it-IT/meta.yml
+++ b/it-IT/meta.yml
@@ -21,7 +21,7 @@ steps:
   - title: Giocatori
   - title: 'Sfida: Aggiungi altri giocatori'
   - title: Giocatori casuali
-  - title: 'Sfida: Scegliere per la squadra B'
+  - title: 'Sfida: Scegliere per il team B'
   - title: Scegliere tanti giocatori
   - title: File
   - title: Giocatori dispari
