--- a/nl-NL/meta.yml
+++ b/nl-NL/meta.yml
@@ -17,7 +17,7 @@ software: python
 version: 3
 last_tested: 2018-04-05
 steps:
-  - title: 'Inleiding'
+  - title: 'Inleiding: '
   - title: Spelers
   - title: 'Uitdaging: meer spelers toevoegen'
   - title: Willekeurige spelers
