--- a/zh-CN/meta.yml
+++ b/zh-CN/meta.yml
@@ -1,26 +1,30 @@
+---
 hero_image: images/team-chooser.png
 theme: violet
 duration: 2
 listed: true
 ingredient: false
 copyedit: false
-curriculum: creator, design-0, programming-0, phys-comp-0, manufacture-0, community-0
-title: 团队选择器
-description: 制作一个程序来将玩家分成 2 个随机团队。
-original_url: https://codeclubprojects.org/en-GB/python/team-chooser
-interests: ''
+curriculum: 1, design-0, programming-1, phys-comp-0, manufacture-0, community-0
+title: 组队器
+description: 制作一个程序来将队员分成 2 个随机团队。
+original_url: https://codeclubprojects.org/zh-CN/python/team-chooser
+interests: games
 technologies: python
-site_areas: codeclub, python
+site_areas: projects
+hardware: ''
+software: python
+version: 3
+last_tested: 2018-04-05
 steps:
-- title: '介绍'
-- title: 玩家
-- title: '挑战：添加更多玩家'
-- title: 随机玩家
-- title: '挑战：选择 B 队玩家'
-- title: 选择大量玩家
-- title: 文件
-- title: 奇数玩家
-- title: '挑战：随机团队名称'
-- title: '挑战：储存团队名称'
-- title: '挑战：更多团队'
-
+  - title: '介绍： '
+  - title: 队员
+  - title: '挑战：添加更多队员'
+  - title: 随机队员
+  - title: '挑战：为B队选择队员'
+  - title: 选择很多队员
+  - title: 文件
+  - title: 奇数数量的队员
+  - title: '挑战：随机团队名称'
+  - title: '挑战：保存团队名称'
+  - title: '挑战：更多团队'
