--- a/ko-KR/meta.yml
+++ b/ko-KR/meta.yml
@@ -25,6 +25,6 @@ steps:
   - title: 많은 플레이어 선택
   - title: 파일들
   - title: 홀수 플레이어 취급하기
-  - title: '과제: 임의의 팀 이름'
+  - title: '과제: 무작위 팀 이름'
   - title: '과제: 팀 이름 저장'
   - title: '과제: 더 많은 팀'
