--- a/ko-KR/meta.yml
+++ b/ko-KR/meta.yml
@@ -17,7 +17,7 @@ software: python
 version: 3
 last_tested: 2018-04-05
 steps:
-  - title: '들어가며: '
+  - title: '들어가며 '
   - title: 플레이어
   - title: '과제: 더 많은 플레이어 추가'
   - title: 임의의 플레이어
