--- a/ro-RO/meta.yml
+++ b/ro-RO/meta.yml
@@ -17,7 +17,7 @@ software: python
 version: 3
 last_tested: 2018-04-05
 steps:
-  - title: 'Introducere: '
+  - title: 'Introducere'
   - title: Jucători
   - title: 'Provocare: Adăugarea mai multor jucători'
   - title: Jucători la întâmplare
