--- a/es-ES/meta.yml
+++ b/es-ES/meta.yml
@@ -17,7 +17,7 @@ software: python
 version: 3
 last_tested: 2018-04-05
 steps:
-  - title: 'Introducción:'
+  - title: 'Introducción'
   - title: Jugadores
   - title: 'Reto: Añadir más jugadores'
   - title: Jugadores aleatorios
