--- a/ar-SA/meta.yml
+++ b/ar-SA/meta.yml
@@ -1,26 +1,30 @@
+---
 hero_image: images/team-chooser.png
 theme: violet
 duration: 2
 listed: true
 ingredient: false
 copyedit: false
-curriculum: creator, design-0, programming-0, phys-comp-0, manufacture-0, community-0
+curriculum: 1, design-0, programming-1, phys-comp-0, manufacture-0, community-0
 title: برنامج اختيار الفِرق
 description: أنشئ برنامجًا لتقسيم اللاعبِين إلى فريقَين عشوائيين.
 original_url: https://codeclubprojects.org/en-GB/python/team-chooser
-interests: ''
+interests: games
 technologies: python
-site_areas: codeclub, python
+site_areas: projects
+hardware: ''
+software: python
+version: 3
+last_tested: 2018-04-05
 steps:
-- title: 'المقدمة'
-- title: اللاعبون
-- title: 'التحدي: أضف لاعبِين آخرين'
-- title: لاعبون عشوائيون
-- title: 'التحدي: اختر لاعبِين للفريق B'
-- title: اختيار لاعبِين كثيرين
-- title: الملفات
-- title: عدد فردي من اللاعبِين
-- title: 'التحدي: أسماء عشوائية للفِرق'
-- title: 'التحدي: خزِّن أسماء الفِرق'
-- title: 'التحدي: فِرق أخرى'
-
+  - title: 'مقدمة'
+  - title: لاعبين
+  - title: 'التحدي: إضافة المزيد من اللاعبين'
+  - title: لاعبين عشوائيين
+  - title: 'التحدي: الاختيار للفريق B'
+  - title: اختيار الكثير من اللاعبين
+  - title: ملفات
+  - title: لاعبين فرديين
+  - title: 'التحدي: أسماء فرق عشوائية'
+  - title: 'التحدي: خزِّن أسماء الفِرق'
+  - title: 'تحدي: مزيد من الفرق'
