--- a/ar-SA/meta.yml
+++ b/ar-SA/meta.yml
@@ -18,13 +18,13 @@ version: 3
 last_tested: 2018-04-05
 steps:
   - title: 'مقدمة'
-  - title: لاعبين
+  - title: لاللاعبون
   - title: 'التحدي: إضافة المزيد من اللاعبين'
   - title: لاعبين عشوائيين
   - title: 'التحدي: الاختيار للفريق B'
   - title: اختيار الكثير من اللاعبين
-  - title: ملفات
-  - title: لاعبين فرديين
+  - title: الملفات
+  - title: عدد فردي من اللاعبِين
   - title: 'التحدي: أسماء فرق عشوائية'
   - title: 'التحدي: خزِّن أسماء الفِرق'
   - title: 'تحدي: مزيد من الفرق'
