--- a/fr-FR/meta.yml
+++ b/fr-FR/meta.yml
@@ -1,3 +1,4 @@
+---
 hero_image: images/team-chooser.png
 theme: violet
 duration: 2
@@ -5,25 +6,25 @@ listed: true
 ingredient: false
 copyedit: false
 curriculum: 1, design-0, programming-1, phys-comp-0, manufacture-0, community-0
-title: Team Chooser
+title: Sélecteur d'équipe
 description: Crée un programme pour partager plusieurs joueurs aléatoirement en deux équipes.
 original_url: https://codeclubprojects.org/en-GB/python/team-chooser
 interests: games
 technologies: python
-site_areas: projects
+site_areas: projets
 hardware: ''
 software: python
 version: 3
 last_tested: 2018-04-05
-steps: 
-- title: 'Introduction'
-- title: Joueurs
-- title: 'Défi: Ajoute plus de joueurs'
-- title: Joueurs aléatoires
-- title: "Défi: Choisir pour l'équipe B"
-- title: Choisir plein de joueurs
-- title: Fichiers
-- title: Joueurs impair
-- title: "Défi: Nom d'équipe aléatoire"
-- title: "Défi: Stock les noms d'équipe"
-- title: "Défi: Encore plus d'équipe"
+steps:
+  - title: 'Introduction'
+  - title: Joueurs
+  - title: 'Défi: Ajoute plus de joueurs'
+  - title: Joueurs aléatoires
+  - title: "Défi: Choisir pour l'équipe B"
+  - title: Choisir plein de joueurs
+  - title: Fichiers
+  - title: Joueurs impair
+  - title: "Défi: Noms déquipe aléatoire"
+  - title: "Défi: Stocker les noms d'équipe"
+  - title: "Défi: Encore plus d'équipes"
