--- a/hi-IN/meta.yml
+++ b/hi-IN/meta.yml
@@ -21,7 +21,7 @@ steps:
   - title: खिलाड़ी
   - title: 'चुनौती: और खिलाड़ी जोड़ना'
   - title: बेतरतीब खिलाड़ी
-  - title: 'चुनौती: टीम B के लिए चुनना'
+  - title: 'चुनौती: टीम बी के लिए चयन'
   - title: बहुत से खिलाड़ी चुनना
   - title: फाइलें
   - title: विषम खिलाड़ी
