--- a/zh-TW/meta.yml
+++ b/zh-TW/meta.yml
@@ -18,7 +18,7 @@ version: 3
 last_tested: 2018-04-05
 steps:
   - title: '介紹： '
-  - title: 玩家
+  - title: 隊員
   - title: '挑戰：增加更多玩家'
   - title: 隨機玩家
   - title: '挑戰：為B隊選擇隊員'
