--- a/el-GR/meta.yml
+++ b/el-GR/meta.yml
@@ -17,14 +17,16 @@ software: python
 version: 3
 last_tested: 2018-04-05
 steps:
-  - title: 'Εισαγωγή'
-  - title: Παίκτες
-  - title: 'Πρόκληση: Προσθήκη περισσότερων παικτών'
-  - title: Τυχαίοι παίκτες
-  - title: 'Πρόκληση: Επιλογή για την ομάδα Β'
-  - title: Επιλογή πολλών παικτών
-  - title: Αρχεία
-  - title: Περιττός αριθμός παικτών
-  - title: 'Πρόκληση: Τυχαία ονόματα ομάδων'
-  - title: 'Πρόκληση: Αποθήκευση ονομάτων ομάδων'
-  - title: 'Πρόκληση: Περισσότερες ομάδες'
+- title: Εισαγωγή
+  completion: engaged
+- title: Παίκτες
+- title: 'Πρόκληση: Προσθήκη περισσότερων παικτών'
+- title: Τυχαίοι παίκτες
+- title: 'Πρόκληση: Επιλογή για την ομάδα Β'
+- title: Επιλογή πολλών παικτών
+- title: Αρχεία
+- title: Περιττός αριθμός παικτών
+- title: 'Πρόκληση: Τυχαία ονόματα ομάδων'
+- title: 'Πρόκληση: Αποθήκευση ονομάτων ομάδων'
+  completion: internal
+- title: 'Πρόκληση: Περισσότερες ομάδες'
