--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,3 +1,4 @@
+---
 hero_image: images/team-chooser.png
 theme: violet
 duration: 2
@@ -15,8 +16,9 @@ hardware: ''
 software: python
 version: 3
 last_tested: 2018-04-05
-steps: 
+steps:
 - title: 'Introduction: '
+  completion: engaged
 - title: Players
 - title: 'Challenge: Adding more players'
 - title: Random players
@@ -26,4 +28,5 @@ steps:
 - title: Odd players
 - title: 'Challenge: Random team names'
 - title: 'Challenge: Storing team names'
+  completion: internal
 - title: 'Challenge: More teams'
