--- a/kn-IN/meta.yml
+++ b/kn-IN/meta.yml
@@ -17,14 +17,16 @@ software: python
 version: 3
 last_tested: 2018-04-05
 steps:
-  - title: 'ಪರಿಚಯ'
-  - title: ಆಟಗಾರರು
-  - title: 'ಸವಾಲು: ಹೆಚ್ಚು ಆಟಗಾರರನ್ನು ಸೇರಿಸುವುದು'
-  - title: ಸ್ವೇಚ್ಛೆಯಾದ ಆಟಗಾರರು
-  - title: 'ಸವಾಲು: ಬಿ ತಂಡವನ್ನು ಆಯ್ಕೆ ಮಾಡುವುದು'
-  - title: ಸಾಕಷ್ಟು ಆಟಗಾರರನ್ನು ಆಯ್ಕೆ ಮಾಡುವುದು
-  - title: ಕಡತಗಳನ್ನು
-  - title: ಬೆಸ ಆಟಗಾರರು
-  - title: 'ಸವಾಲು: ಸ್ವೇಚ್ಛೆಯಾದ ತಂಡಗಳ ಹೆಸರು'
-  - title: 'ಸವಾಲು: ತಂಡದ ಹೆಸರುಗಳನ್ನು ಸಂಗ್ರಹಿಸುವುದು'
-  - title: 'ಸವಾಲು: ಹೆಚ್ಚಿನ ತಂಡಗಳು'
+- title: ಪರಿಚಯ
+  completion: engaged
+- title: ಆಟಗಾರರು
+- title: 'ಸವಾಲು: ಹೆಚ್ಚು ಆಟಗಾರರನ್ನು ಸೇರಿಸುವುದು'
+- title: ಸ್ವೇಚ್ಛೆಯಾದ ಆಟಗಾರರು
+- title: 'ಸವಾಲು: ಬಿ ತಂಡವನ್ನು ಆಯ್ಕೆ ಮಾಡುವುದು'
+- title: ಸಾಕಷ್ಟು ಆಟಗಾರರನ್ನು ಆಯ್ಕೆ ಮಾಡುವುದು
+- title: ಕಡತಗಳನ್ನು
+- title: ಬೆಸ ಆಟಗಾರರು
+- title: 'ಸವಾಲು: ಸ್ವೇಚ್ಛೆಯಾದ ತಂಡಗಳ ಹೆಸರು'
+- title: 'ಸವಾಲು: ತಂಡದ ಹೆಸರುಗಳನ್ನು ಸಂಗ್ರಹಿಸುವುದು'
+  completion: internal
+- title: 'ಸವಾಲು: ಹೆಚ್ಚಿನ ತಂಡಗಳು'
