--- a/de-DE/meta.yml
+++ b/de-DE/meta.yml
@@ -17,14 +17,16 @@ software: python
 version: 3
 last_tested: 2018-04-05
 steps:
-  - title: 'Einleitung: '
-  - title: Mitspieler
-  - title: 'Aufgabe: Weitere Mitspieler hinzufügen'
-  - title: Zufällig ausgesuchte Mitspieler
-  - title: 'Aufgabe: Für Team B wählen'
-  - title: Viele Mitspieler wählen
-  - title: Dateien
-  - title: Ungerade Anzahl an Mitspielern
-  - title: 'Aufgabe: Zufällige Teamnamen'
-  - title: 'Aufgabe: Teamnamen speichern'
-  - title: 'Aufgabe: Weitere Teams'
+- title: 'Einleitung: '
+  completion: engaged
+- title: Mitspieler
+- title: 'Aufgabe: Weitere Mitspieler hinzufügen'
+- title: Zufällig ausgesuchte Mitspieler
+- title: 'Aufgabe: Für Team B wählen'
+- title: Viele Mitspieler wählen
+- title: Dateien
+- title: Ungerade Anzahl an Mitspielern
+- title: 'Aufgabe: Zufällige Teamnamen'
+- title: 'Aufgabe: Teamnamen speichern'
+  completion: internal
+- title: 'Aufgabe: Weitere Teams'
