--- a/es-LA/meta.yml
+++ b/es-LA/meta.yml
@@ -17,14 +17,16 @@ software: python
 version: 3
 last_tested: 2018-04-05
 steps:
-  - title: 'Introducción: '
-  - title: Jugadores
-  - title: 'Desafío: Añadir más jugadores'
-  - title: Jugadores aleatorios
-  - title: 'Desafío: Elegir para el equipo B'
-  - title: Selección de muchos jugadores
-  - title: Archivos
-  - title: Jugadores impares
-  - title: 'Desafío: Nombra los equipos aleatorios'
-  - title: 'Desafío: Almacenamiento de los nombres de los equipos'
-  - title: 'Desafío: Más equipos'
+- title: 'Introducción: '
+  completion: engaged
+- title: Jugadores
+- title: 'Desafío: Añadir más jugadores'
+- title: Jugadores aleatorios
+- title: 'Desafío: Elegir para el equipo B'
+- title: Selección de muchos jugadores
+- title: Archivos
+- title: Jugadores impares
+- title: 'Desafío: Nombra los equipos aleatorios'
+- title: 'Desafío: Almacenamiento de los nombres de los equipos'
+  completion: internal
+- title: 'Desafío: Más equipos'
