--- a/fr-FR/meta.yml
+++ b/fr-FR/meta.yml
@@ -7,7 +7,8 @@ ingredient: false
 copyedit: false
 curriculum: 1, design-0, programming-1, phys-comp-0, manufacture-0, community-0
 title: Sélecteur d'équipe
-description: Crée un programme pour partager plusieurs joueurs aléatoirement en deux équipes.
+description: Crée un programme pour partager plusieurs joueurs aléatoirement en deux
+  équipes.
 original_url: https://codeclubprojects.org/en-GB/python/team-chooser
 interests: games
 technologies: python
@@ -17,14 +18,16 @@ software: python
 version: 3
 last_tested: 2018-04-05
 steps:
-  - title: 'Introduction'
-  - title: Joueurs
-  - title: 'Défi: Ajoute plus de joueurs'
-  - title: Joueurs aléatoires
-  - title: "Défi: Choisir pour l'équipe B"
-  - title: Choisir plein de joueurs
-  - title: Fichiers
-  - title: Joueurs impair
-  - title: "Défi: Noms déquipe aléatoire"
-  - title: "Défi: Stocker les noms d'équipe"
-  - title: "Défi: Encore plus d'équipes"
+- title: Introduction
+  completion: engaged
+- title: Joueurs
+- title: 'Défi: Ajoute plus de joueurs'
+- title: Joueurs aléatoires
+- title: 'Défi: Choisir pour l''équipe B'
+- title: Choisir plein de joueurs
+- title: Fichiers
+- title: Joueurs impair
+- title: 'Défi: Noms déquipe aléatoire'
+- title: 'Défi: Stocker les noms d''équipe'
+  completion: internal
+- title: 'Défi: Encore plus d''équipes'
