--- a/hr-HR/meta.yml
+++ b/hr-HR/meta.yml
@@ -1,3 +1,4 @@
+---
 hero_image: images/team-chooser.png
 theme: violet
 duration: 2
@@ -6,7 +7,8 @@ ingredient: false
 copyedit: false
 curriculum: 1, design-0, programming-1, phys-comp-0, manufacture-0, community-0
 title: Odaberi tim
-description: U ovom projektu ćeš naučiti kako kreirati dva nasumična tima koristeći imena igrača sa datog popisa.
+description: U ovom projektu ćeš naučiti kako kreirati dva nasumična tima koristeći
+  imena igrača sa datog popisa.
 original_url: https://codeclubprojects.org/en-GB/python/team-chooser
 interests: games
 technologies: python
@@ -15,5 +17,6 @@ hardware: ''
 software: python
 version: 3
 last_tested: 2018-04-05
-steps: 
+steps:
 - title: Odaberi tim
+  completion: engaged
