--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,3 +1,4 @@
+---
 hero_image: images/team-chooser.png
 theme: violet
 duration: 2
@@ -15,15 +16,19 @@ hardware: ''
 software: python
 version: 3
 last_tested: 2018-04-05
-steps: 
+steps:
 - title: 'Introduction: '
 - title: Players
 - title: 'Challenge: Adding more players'
 - title: Random players
+  completion:
+  - engaged
 - title: 'Challenge: Choosing for team B'
 - title: Choosing lots of players
 - title: Files
 - title: Odd players
+  completion:
+  - internal
 - title: 'Challenge: Random team names'
 - title: 'Challenge: Storing team names'
 - title: 'Challenge: More teams'
