--- a/ro-RO/meta.yml
+++ b/ro-RO/meta.yml
@@ -17,14 +17,18 @@ software: python
 version: 3
 last_tested: 2018-04-05
 steps:
-  - title: 'Introducere'
-  - title: Jucători
-  - title: 'Provocare: Adăugarea mai multor jucători'
-  - title: Jucători la întâmplare
-  - title: 'Provocare: Alegerea jucătorilor pentru echipa B'
-  - title: Alegerea mai multor jucători
-  - title: Fișiere
-  - title: Jucători impari
-  - title: 'Provocare: Nume de echipe la întâmplare'
-  - title: 'Provocare: Salvarea numelor echipelor'
-  - title: 'Provocare: Mai multe echipe'
+- title: Introducere
+- title: Jucători
+- title: 'Provocare: Adăugarea mai multor jucători'
+- title: Jucători la întâmplare
+  completion:
+  - engaged
+- title: 'Provocare: Alegerea jucătorilor pentru echipa B'
+- title: Alegerea mai multor jucători
+- title: Fișiere
+- title: Jucători impari
+  completion:
+  - internal
+- title: 'Provocare: Nume de echipe la întâmplare'
+- title: 'Provocare: Salvarea numelor echipelor'
+- title: 'Provocare: Mai multe echipe'
