--- a/ar-SA/meta.yml
+++ b/ar-SA/meta.yml
@@ -17,14 +17,18 @@ software: python
 version: 3
 last_tested: 2018-04-05
 steps:
-  - title: 'مقدمة'
-  - title: لاللاعبون
-  - title: 'التحدي: إضافة المزيد من اللاعبين'
-  - title: لاعبين عشوائيين
-  - title: 'التحدي: الاختيار للفريق B'
-  - title: اختيار الكثير من اللاعبين
-  - title: الملفات
-  - title: عدد فردي من اللاعبِين
-  - title: 'التحدي: أسماء فرق عشوائية'
-  - title: 'التحدي: خزِّن أسماء الفِرق'
-  - title: 'تحدي: مزيد من الفرق'
+- title: مقدمة
+- title: لاللاعبون
+- title: 'التحدي: إضافة المزيد من اللاعبين'
+- title: لاعبين عشوائيين
+  completion:
+  - engaged
+- title: 'التحدي: الاختيار للفريق B'
+- title: اختيار الكثير من اللاعبين
+- title: الملفات
+- title: عدد فردي من اللاعبِين
+  completion:
+  - internal
+- title: 'التحدي: أسماء فرق عشوائية'
+- title: 'التحدي: خزِّن أسماء الفِرق'
+- title: 'تحدي: مزيد من الفرق'
