--- a/mr-IN/meta.yml
+++ b/mr-IN/meta.yml
@@ -17,14 +17,18 @@ software: python
 version: 3
 last_tested: 2018-04-05
 steps:
-  - title: 'परिचय'
-  - title: खेळाडू
-  - title: 'आव्हान: आणखी खेळाडू जोडणे'
-  - title: कोणतेही खेळाडू
-  - title: 'आव्हान: team B साठी निवडणे'
-  - title: बरेच खेळाडू निवडणे
-  - title: फायली
-  - title: विषम खेळाडू
-  - title: 'आव्हान: कोणत्याही टीमची नावे'
-  - title: 'आव्हान: टीमची नावे संग्रहीत करणे'
-  - title: 'आव्हान: आणखी टीम्स'
+- title: परिचय
+- title: खेळाडू
+- title: 'आव्हान: आणखी खेळाडू जोडणे'
+- title: कोणतेही खेळाडू
+  completion:
+  - engaged
+- title: 'आव्हान: team B साठी निवडणे'
+- title: बरेच खेळाडू निवडणे
+- title: फायली
+- title: विषम खेळाडू
+  completion:
+  - internal
+- title: 'आव्हान: कोणत्याही टीमची नावे'
+- title: 'आव्हान: टीमची नावे संग्रहीत करणे'
+- title: 'आव्हान: आणखी टीम्स'
