--- a/pt-BR/meta.yml
+++ b/pt-BR/meta.yml
@@ -17,14 +17,18 @@ software: python
 version: 3
 last_tested: 2018-04-05
 steps:
-  - title: 'Introdução'
-  - title: Jogadores
-  - title: 'Desafio: adicionando mais jogadores'
-  - title: Jogadores aleatórios
-  - title: 'Desafio: escolhendo para o time B'
-  - title: Escolhendo muitos jogadores
-  - title: Arquivos
-  - title: Jogadores ímpares
-  - title: 'Desafio: nomes aleatórios de equipes'
-  - title: 'Desafio: armazenar nomes de equipes'
-  - title: 'Desafio: mais equipes'
+- title: Introdução
+- title: Jogadores
+- title: 'Desafio: adicionando mais jogadores'
+- title: Jogadores aleatórios
+  completion:
+  - engaged
+- title: 'Desafio: escolhendo para o time B'
+- title: Escolhendo muitos jogadores
+- title: Arquivos
+- title: Jogadores ímpares
+  completion:
+  - internal
+- title: 'Desafio: nomes aleatórios de equipes'
+- title: 'Desafio: armazenar nomes de equipes'
+- title: 'Desafio: mais equipes'
