Adding completion flags to meta yaml

--- a/cy-GB/meta.yml
+++ b/cy-GB/meta.yml
@@ -18,15 +18,17 @@ version: 3
 last_tested: 2018-04-05
 steps:
 - title: Cyflwyniad
-  completion: engaged
 - title: Chwaraewyr
 - title: 'Her: Ychwanegu mwy o chwaraewyr'
 - title: Chwaraewyr ar hap
+  completion:
+  - engaged
 - title: 'Her: Dewis ar gyfer tîm B'
 - title: Dewis llawer o chwaraewyr
 - title: Ffeiliau
 - title: Chwaraewyr odrif
+  completion:
+  - internal
 - title: 'Her: Enwau tîm ar hap'
 - title: 'Her: Storio enwau tîm'
-  completion: internal
 - title: 'Her: Mwy o dimau'
