--- a/ro-RO/meta.yml
+++ b/ro-RO/meta.yml
@@ -18,15 +18,17 @@ version: 3
 last_tested: 2018-04-05
 steps:
 - title: Introducere
-  completion: engaged
 - title: Jucători
 - title: 'Provocare: Adăugarea mai multor jucători'
 - title: Jucători la întâmplare
+  completion:
+  - engaged
 - title: 'Provocare: Alegerea jucătorilor pentru echipa B'
 - title: Alegerea mai multor jucători
 - title: Fișiere
 - title: Jucători impari
+  completion:
+  - internal
 - title: 'Provocare: Nume de echipe la întâmplare'
 - title: 'Provocare: Salvarea numelor echipelor'
-  completion: internal
 - title: 'Provocare: Mai multe echipe'
