--- a/es-ES/meta.yml
+++ b/es-ES/meta.yml
@@ -18,15 +18,17 @@ version: 3
 last_tested: 2018-04-05
 steps:
 - title: Introducción
-  completion: engaged
 - title: Jugadores
 - title: 'Reto: Añadir más jugadores'
 - title: Jugadores aleatorios
+  completion:
+  - engaged
 - title: 'Reto: Elegir para el equipo B'
 - title: Selección de muchos jugadores
 - title: Archivos
 - title: Jugadores impares
+  completion:
+  - internal
 - title: 'Reto: Nombres de equipo aleatorios'
 - title: 'Reto: Almacenamiento de los nombres de los equipos'
-  completion: internal
 - title: 'Reto: Más equipos'
