--- a/es-LA/meta.yml
+++ b/es-LA/meta.yml
@@ -18,15 +18,17 @@ version: 3
 last_tested: 2018-04-05
 steps:
 - title: 'Introducción: '
-  completion: engaged
 - title: Jugadores
 - title: 'Desafío: Añadir más jugadores'
 - title: Jugadores aleatorios
+  completion:
+  - engaged
 - title: 'Desafío: Elegir para el equipo B'
 - title: Selección de muchos jugadores
 - title: Archivos
 - title: Jugadores impares
+  completion:
+  - internal
 - title: 'Desafío: Nombra los equipos aleatorios'
 - title: 'Desafío: Almacenamiento de los nombres de los equipos'
-  completion: internal
 - title: 'Desafío: Más equipos'
