--- a/pl-PL/meta.yml
+++ b/pl-PL/meta.yml
@@ -18,15 +18,17 @@ version: 3
 last_tested: 2018-04-05
 steps:
 - title: Wprowadzenie
-  completion: engaged
 - title: Gracze
 - title: 'Wyzwanie: Dodawanie kolejnych graczy'
 - title: Losowi gracze
+  completion:
+  - engaged
 - title: 'Wyzwanie: Wybieranie do zespołu B'
 - title: Wybieranie wielu graczy
 - title: Pliki
 - title: Nieparzyści gracze
+  completion:
+  - internal
 - title: 'Wyzwanie: Losowe nazwy zespołów'
 - title: 'Wyzwanie: Przechowywanie nazw zespołów'
-  completion: internal
 - title: 'Wyzwanie: Więcej zespołów'
