--- a/tr-TR/meta.yml
+++ b/tr-TR/meta.yml
@@ -18,15 +18,17 @@ version: 3
 last_tested: 2018-04-05
 steps:
 - title: 'Giriş: '
-  completion: engaged
 - title: Oyuncular
 - title: 'Meydan okuma: daha fazla oyuncu ekleyin'
 - title: Rastgele oyuncular
+  completion:
+  - engaged
 - title: 'Meydan okuma: B takımı için seçme'
 - title: Çok fazla oyuncu seçimi
 - title: Dosyalar
 - title: Tek oyuncular
+  completion:
+  - internal
 - title: 'Meydan okuma: Rastgele takım isimleri'
 - title: 'Meydan okuma: Takım isimlerini saklama'
-  completion: internal
 - title: 'Meydan Okuma: Daha fazla takım'
