--- a/zh-CN/meta.yml
+++ b/zh-CN/meta.yml
@@ -18,15 +18,17 @@ version: 3
 last_tested: 2018-04-05
 steps:
 - title: 介绍
-  completion: engaged
 - title: 队员
 - title: 挑战：添加更多队员
 - title: 随机队员
+  completion:
+  - engaged
 - title: 挑战：为B队选择队员
 - title: 选择很多队员
 - title: 文件
 - title: 奇数数量的队员
+  completion:
+  - internal
 - title: 挑战：随机团队名称
 - title: 挑战：保存团队名称
-  completion: internal
 - title: 挑战：更多团队
